--- a/public/index.html
+++ b/public/index.html
@@ -425,19 +425,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>street address</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>@.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+27 000 0000</p>
               </div>
 
               <iframe src="https://goo.gl/maps/DX5cbYDpVEsoYX1v6" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
